hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_invalid_await_pos.php
<?hh

function f() {
  concurrent {
    $a = 42 + await f1();
    $b = 43 + await f2();
  }
}
